implemented triplet and calculate points from non patterns